r95 (05. 11. 2022):
Election Day 2: Fixed an issue with maximum amount in Loot Counter
Firestarter Day 1: Fixed an issue where Loot Counter and achievements do not show correct progress
Fixed an issue where achievement tracker for "The Reckoning" does not count kills from secondary weapon (if attached with Reconnaissance sight)
Waypoints: Optimized performance

r94 (31. 10. 2022):
Lost in Transit: Updated to U230.1

r93 (30. 10. 2022):
Fixed a crash when you run over a civilian

r92 (28. 10. 2022):
Fixed a crash when bot does not have loadout

r91 (27. 10. 2022):
Menu: Fixed broken buff textures
Santa's Workshop: Added achievement tracker for "Only Santa Brings Gifts"

r90 (25. 10. 2022):
Added trackers for Lost in Transit Heist

r89 (19. 10. 2022):
Updated code to U229
Bloodthirst Ace: Fixed an issue where "reload" buff is not visible

r88 (10. 10. 2022):
Fixed a very rare crash during mission load
Murky Station: Added tracker for achievements "The Pacifist" and "Looting in the Dark"

r87 (08. 10. 2022):
Added proper support for Beardlib achievements
Added throwable regen AI buff
Code cleanup and improvements
Firestarter Day 1: Added achievement tracker for "Wasteful"
The Yacht Heist: Added achievement tracker for "Blood in the Water"

r86 (01. 10. 2022):
Fixed an issue where unlocked achievements are still visible in tracker when an option to hide them is enabled

r85 (30. 09. 2022):
Unlockables: Fixed options not saving correctly

r84 (29. 09. 2022):
Added "Show Escape Chance" option
Added option to show Trophies and Daily Side Jobs
Achievement related options are now under "Unlockables" menu - Trophy and Daily Side Jobs options are there too
Bloodthirst Buff: Fixed an issue where buff's progress is always full when you are still stacking kills
Loot Counter: Fixed an issue where sometimes triggers do not increase progress or maximum
XP Counter: Fixed a very rare crash when game returned "nil" value instead of a number in how much stealth bonus you accumulated
